[gd_scene load_steps=14 format=3 uid="uid://d24pfjikaxa1p"]

[ext_resource type="Texture2D" uid="uid://dmnea0ltf4eh2" path="res://assets/conveyor_belt/conveyor1.png" id="1_mss5x"]
[ext_resource type="Script" path="res://scripts/structures/assembly_line.gd" id="1_t48jb"]
[ext_resource type="Texture2D" uid="uid://d4hydgd2fsg82" path="res://assets/conveyor_belt/conveyor2.png" id="2_sxlns"]
[ext_resource type="Texture2D" uid="uid://cdcdgnb7w6huk" path="res://assets/tiles/whitesq.png" id="4_hvylt"]
[ext_resource type="PackedScene" uid="uid://s6lxpweacnkf" path="res://scenes/components/generator_component.tscn" id="5_l03dv"]
[ext_resource type="PackedScene" uid="uid://c8cu7ia5r4ldj" path="res://scenes/components/upgrades_component.tscn" id="6_kiub1"]
[ext_resource type="PackedScene" uid="uid://67wthaqnj4cf" path="res://scenes/generator_sound_manager.tscn" id="7_tc0rt"]
[ext_resource type="PackedScene" uid="uid://bq7donxqukhfe" path="res://scenes/ui_audio_manager.tscn" id="8_qq217"]
[ext_resource type="AudioStream" uid="uid://crvaoklmby1qb" path="res://assets/sounds/ambientfactorybuzz.wav" id="9_21ibe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x2w8p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mss5x")
}, {
"duration": 1.0,
"texture": ExtResource("2_sxlns")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_llmh5"]
resource_name = "move_polygon"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 5, 5.9, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.840897, 1),
"update": 0,
"values": [Vector2(-12, -56), Vector2(-8, -56), Vector2(16, -56), Vector2(16, 56), Vector2(-8, 56), Vector2(-12, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 5.9, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0.5), Vector2(0.5, 0.5), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"_randomize_polygon"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GeneratorSoundManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random_note"
}]
}

[sub_resource type="Animation" id="Animation_6ebwc"]
resource_name = "move_polygon"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 5, 5.9, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.840897, 1),
"update": 0,
"values": [Vector2(-12, -56), Vector2(-8, -56), Vector2(16, -56), Vector2(16, 56), Vector2(-8, 56), Vector2(-12, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 5.9, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0.5), Vector2(0.5, 0.5), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [1],
"method": &"_randomize_polygon"
}, {
"args": [2],
"method": &"_randomize_polygon"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Polygon2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.61031, 2.5, 3, 3.5, 4.51627, 5.49726),
"transitions": PackedFloat32Array(1, 0.840897, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 56), Vector2(-8, 56), Vector2(-12, 56), Vector2(-12, -56), Vector2(-8, -56), Vector2(16, -56)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Polygon2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5, 3, 3.5, 4.31267),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0, 0), Vector2(0, 0), Vector2(0.5, 0.5)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GeneratorSoundManager")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"play_random_note"
}, {
"args": [],
"method": &"play_random_note"
}, {
"args": [],
"method": &"play_random_note"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kj0tk"]
_data = {
"move_polygon": SubResource("Animation_llmh5"),
"move_two_polygons": SubResource("Animation_6ebwc")
}

[node name="AssemblyLine" type="StaticBody2D"]
collision_layer = 4
input_pickable = true
script = ExtResource("1_t48jb")

[node name="Visual" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x2w8p")
autoplay = "default"
frame_progress = 0.751643
speed_scale = 2.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-24, -64, 24, -64, 24, 64, -24, 64, -24, 48, 8, 48, 8, -48, -24, -48)

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(-16, -56)

[node name="DownPoint" type="Node2D" parent="."]
position = Vector2(16, -56)

[node name="LeftPoint" type="Node2D" parent="."]
position = Vector2(16, 56)

[node name="DespawnPoint" type="Node2D" parent="."]
position = Vector2(-16, 56)

[node name="Polygon" type="Sprite2D" parent="."]
position = Vector2(-12, -56)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_hvylt")

[node name="Polygon2" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, -1.93506)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_hvylt")

[node name="MovePolygon" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kj0tk")
}
autoplay = "move_polygon"
speed_scale = 7.0

[node name="GeneratorComponent" parent="." instance=ExtResource("5_l03dv")]
polygons_increment = 10

[node name="UpgradesComponent" parent="." instance=ExtResource("6_kiub1")]
upgrade_1_info = [true, "Speed", "2x Polygons Speed", 250]

[node name="GeneratorSoundManager" parent="." instance=ExtResource("7_tc0rt")]

[node name="UIAudioManager" parent="." instance=ExtResource("8_qq217")]

[node name="FactorySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_21ibe")
pitch_scale = 4.0
autoplay = true
attenuation = 25.0
bus = &"ConveyorBuzz"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
